[package]
name = "pibench-parser"
version = "0.1.0"
authors = ["Xiangpeng Hao <xha62@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[lib]
name = "pibench_parser"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
