[package]
name = "pibench-parser"
version = "0.1.1"
authors = ["Xiangpeng Hao <me@haoxp.xyz>"]
edition = "2018"
license = "MIT"
keywords = ["pibench", "parser", "benchmark", "index", "persistent-memory"]
repository = "https://github.com/XiangpengHao/pibench-output-parser"
readme = "README.md"
description = "A simple parser to parse the text output from pibench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[lib]
name = "pibench_parser"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
